docs/versions/0.9.4/website/src/content/docs/ja/workflows.mdx
---
title: ワークフロー
description: 複数エージェントの kvdag を定義し、各ノードを Karvex が管理するチームメイトとして実行し、DAG ビューで実行の様子をライブに確認します。
---

ワークフローは保存済みでバージョン管理された **kvdag** です。kvdag とは、ノード(タスク)を、結果を受け渡すエッジでつないだ有向非巡回グラフを指します。ワークフローを実行すると、各ノードは実際のターミナルペイン ── 通常は `claude` チームメイト ── として起動し、すべての分岐が解決するまで調整されます。

ワークフローは、計画 → 実装 → レビューのように、一度定義して繰り返し実行したい複数ステップ・複数エージェントの作業に向いています。すでに動いているエージェント同士を一度きりでスクリプト連携させたい場合は、代わりに [エージェント自動化](/ja/docs/agent-automation/) を参照してください。

## ワークフローとは

**ワークフロー** は、1つ以上の **kvdag バージョン** ── 不変のグラフ定義 ── をまとめる名前付きコンテナです。`kvx workflow create` が最初のバージョンを作り、`kvx workflow update` がその上に新しいバージョンを作成します。編集は既存のバージョンをその場で書き換えることはなく、常に新しいバージョンを生み出すので、過去の実行は実際に動いたバージョンに対して常に再現可能です。

**実行 (run)** は1つの kvdag バージョンを取り、宣言された実行引数を埋めてグラフを実行します。各ノードは **実行ノード (run node)** になります ── それぞれが独自のステータス、モデル/エフォートの割り当て、ペインへのバインディング、結果を持つインスタンスです。ノードはすべての入力エッジが解決した時点で開始し、互いに依存しないノードは設定された並行数の上限まで並列に実行されます。条件付きエッジの条件が false と評価されるとそのエッジは無効になり、すべての入力エッジが無効になったノードはグラフの残りをブロックすることなく `skipped` になります ── これがスクリプト言語なしで分岐を実現する仕組みです。

実行が完了するのは、スケジュールできるものが何もなくなった時点ではなく、すべてのノードが結果を確定し、その後に何が起きるかを記録した時点です。あるノードが後続エッジの解決、ブロッカーの記録、あるいは「後続がない」ことの明示的な証跡のいずれも残さずに終わった場合、実行は一時停止し、成功を黙って報告する代わりに責任のある正確なノードを名指しします。

## 定義フォーマット

`kvx workflow create` と `kvx workflow update` は、TOML または JSON の定義ドキュメントを読み込みます ── ファイル拡張子でフォーマットが決まります。手で編集しやすいのは TOML です:

```toml
name = "ship-feature"
description = "plan → implement → review"
contract = """
Reply only through result.json. Never edit files outside your node dir unless the task says so.
"""
max_depth = 3
max_nodes = 24

# Declared run-argument namespace. Without this, `{{goal}}` below has no inbound
# edge port to resolve against and workflow.create rejects the document.
[[arg]]
name = "goal"
required = true
description = "what to build"

[[node]]
key = "plan"
label = "Plan"
kind = "agent"
runner = "agent"          # `claude` teammate; "command" runs `command` as a plain process
demand = "critical"
prompt_template = "Produce an implementation plan for: {{goal}}"
output_schema = { type = "object", required = ["plan"], properties = { plan = { type = "string" } } }

[[node]]
key = "implement"
label = "Implement"
kind = "agent"
demand = "peak"
prompt_template = "Implement this plan:\n{{plan}}"
output_schema = { type = "object", required = ["changed_files","report"], properties = { changed_files = { type = "array" }, report = { type = "string" } } }

[[edge]]
from = "plan"
to = "implement"
kind = "data"
payload = "summary"
port = "plan"
```

`contract` はすべてのノードのシステムプロンプトの先頭に付加されます ── ノードごとに繰り返し書く代わりに、横断的なルールはここに書いてください。`max_depth` と `max_nodes` はグラフの成長上限です。この段階の実行は上で定義したノードだけを厳密に実行するため、これらはノード主導の拡張が後のリリースで追加されて初めて意味を持ちます。

各 `[[arg]]` は実行引数の名前空間に1エントリを宣言し、実行時に `--arg name=value` で埋められます。`prompt_template` 内のすべての `{{name}}` プレースホルダーは、宣言済みの引数か入力エッジの `port` のいずれかに解決できなければなりません ── `workflow.create` は、実行される前に未解決のプレースホルダーを含むドキュメントを拒否し、実行の開始時には、デフォルト値のない必須引数が欠けている場合を別途拒否します。

各 `[[node]]` には一意な `key`、`label`、`prompt_template`、そして `output_schema` が必要です。`output_schema` は、ノードの結果が成功と見なされる前に検証対象となる JSON Schema です。`output_schema` を省略すると、ドキュメントが拒否されるのではなく、空のスキーマ `{}` (任意のオブジェクトを許可) が使われます。検証したい形が決まったら明示的に宣言してください。`kind` はデフォルトで `"agent"` です。他の種類 (`internal`、`gate`、`monitor`) は現在受け付けられていますが、そのスケジューリング動作は後のリリースで提供されます。`runner` はノードのプロセスがどう起動されるかを選びます ── 後述のノードランナーを参照してください。`demand` (`peak`、`critical`、`standard`、`light`。デフォルトは `standard`) は、実行のティアをノードごとのモデル/エフォート割り当てに反映します。

各 `[[edge]]` は `from` ノードと `to` ノードを接続し、`kind` が必要です: `sequence` (ソースが成功していること)、`data` (ソースが成功し、かつ結果が検証されていること)、`conditional` (ソースの結果に対して `condition` を評価し、false ならエッジが無効になる) のいずれかです。`kind` を省略すると `sequence` になります。`conditional` エッジは `condition` を宣言する必要があります ── `condition` のない `conditional` エッジは、後で解決されないまま黙って残るのではなく、作成時に拒否されます。`payload` は、ソースのチェックポイントのどれだけをターゲットへ渡すかを制御します: `none`、`summary` (デフォルト)、`full` のいずれかです。`port` は、エッジのペイロードが埋めるターゲットの `prompt_template` 内の `{{slot}}` の名前です。ターゲットの `prompt_template` に存在しない `{{slot}}` を指す `port` も、データが渡される先のないワークフローになってしまうため、作成時に拒否されます。

宣言済みの引数を指定して実行します:

```bash
kvx workflow run start ship-feature --arg goal="add dark mode"
```

保存済みのワークフローを手で編集するには、新しい定義ファイルを指定して `kvx workflow update` を実行します。これは、元にしたバージョンをその場で書き換えるのではなく新しい kvdag バージョンを作成するので、過去のすべての実行は実際に動いたバージョンに対して再現可能なままです。

## ノードランナー

`runner` は、`kind` とは独立に、ノードのプロセスがどう起動されるかを選びます:

| `runner` | プロセス | 起動確認 | ステアリング | 完了 |
| --- | --- | --- | --- | --- |
| `agent` (デフォルト) | 実行が解決したモデルとエフォートで起動される、ペイン内の `claude` | 起動待機時間内に検出済みエージェントとして起動しなければならず、そうでなければ起動自体が失敗として扱われる | `agent.prompt` と同じ検証済み経路で配送される | 後述するノードの契約にある3つのシグナルのいずれか |
| `command` | ノード自身の `command` argv を、通常のプロセスとして実行 | なし ── ペインは単に起動したプロセスにすぎない | 生のペインテキストとして配送される | セルフレポートのみ |

`command` ノードには `command = ["...", ...]` ── シェル文字列ではなく argv のリスト ── が必要です。`agent` ノードと同じ `KARVEX_WORKFLOW_*` 環境変数を受け取るので、同じように `kvx workflow node complete` を呼び出せますが、ターンエンドフックも画面検出もありません。ノード自身がレポートすることだけが、そのノードを完了させます。

## ノードの契約

すべてのノードは、専用のディレクトリ `<run dir>/<instance path>/` の中で実行されます:

| ファイル | 書き込む主体 | 内容 |
| --- | --- | --- |
| `task.md` | Karvex | レンダリング済みのプロンプト: ワークフローの契約、ノードの役割、タスク、`inputs/` 配下のファイルのパス |
| `inputs/<port>.json` | Karvex | 入力エッジのポートごとの、上流のチェックポイントのペイロード |
| `output_schema.json` | Karvex | `result.json` が満たすべき JSON Schema |
| `result.json` | ノード自身 | 構造化された結果 |
| `artifacts/` | ノード自身 | `result.json` の `artifacts` 配列から参照されるファイル |

`result.json` を書き込み、次を実行してノードを完了させます:

```bash
kvx workflow node complete
kvx workflow node complete --result-file <path>   # defaults to ./result.json in the node directory
```

このコマンドは、ノードのペインにすでに設定されている環境変数 `KARVEX_WORKFLOW_RUN_ID`、`KARVEX_WORKFLOW_NODE_PATH`、`KARVEX_WORKFLOW_NODE_DIR`、`KARVEX_WORKFLOW_NODE_TOKEN` を読み取るため、位置引数を取りません。`result.json` には `summary` 文字列を含めてください ── 下流のノードや実行履歴が参照するのはこの文字列です ── また、インラインで収めるには大きすぎるものは `./artifacts/` 配下へのパスの配列 `artifacts` に入れてください。

このセルフレポートは、3つの完了シグナルのうち最も優先度の高いものです:

| 優先度 | シグナル | 対象 | 記録される値 |
| --- | --- | --- | --- |
| 1 | セルフレポート ── ノードが `kvx workflow node complete` を呼び出す | `agent` ノードと `command` ノード | `self_report` |
| 2 | ターンエンド ── 同梱の Claude フックがペインのターン終了を報告し、Karvex が `result.json` を読み取る | `agent` ノードのみ | `hook` |
| 3 | 検出 ── ペインが複数回連続で idle と判定され、かつ有効な `result.json` が存在する | `agent` ノードのみ | `detection` |

:::caution[idle だけでは完了しません]
`output_schema.json` に対して検証が通る `result.json` を一度も作らないままペインが idle になったノードは完了しません。代わりに `needs_attention` に移行し、その状態が続く間、実行は成功を報告しません。必ず `kvx workflow node complete` を通じて完了させるか、エージェントが最後に行うことが有効な結果の書き込みになるようにしてください。
:::

不正な結果には、スキーマエラーを引用した自動的な是正の再プロンプトが1回だけ送られます。それでも不正なままであれば、ノードは同じように `needs_attention` に移行します。

## コマンド

`kvx workflow` は `kvx --help` のコマンド一覧にも表示されます。`show`、`create`、`update`、`run start`、`run show`、`node show` はすべてデフォルトで人間が読めるテキストを出力します。機械可読なエンベロープが必要な場合は `--json` を付けてください。

```bash
kvx workflow list
kvx workflow show <name|id> [--json]
kvx workflow create --file <definition.toml|json> [--name <name>] [--json]
kvx workflow update <name|id> --file <definition.toml|json> [--change-summary <text>] [--json]
```

`create` と `update` は、前述の定義ドキュメントを `--file` から読み込みます。拡張子で TOML か JSON かが決まります。`update` は現在のバージョンを編集するのではなく、新しい kvdag バージョンを作成します ── ただし、定義が現在のヘッドバージョンとバイト単位で一致する場合は何も新しく作成されず、人間向け出力にはバージョンが作成されたという表示の代わりに `(unchanged — this definition matches the current version; no new version was created)` と表示されます。`--json` なしの `show` は、ワークフローの概要、フォーマット済みタイムスタンプ付きのバージョン履歴、そしてヘッドバージョンのノード (key、label、runner、demand)、エッジ (from/to/kind/port)、宣言済み引数を表示します ── `node show`/`steer`/`restart` 用のノード `<path>` や `run start` 用の `--arg` 名を、元の定義ファイルに戻らずに見つけられます。

```bash
kvx workflow run start <name|id> [--tier auto|max|high|medium|low] [--arg KEY=VALUE]... [--json]
kvx workflow run list <name|id> [--limit N]
kvx workflow run show <run_id> [--json]
kvx workflow run cancel <run_id>
```

`run` はワークフローを選ぶ引数ではなく、名前空間です。`start`、`list`、`show`、`cancel` はそれぞれ独自の引数を取るため、ワークフローに `list` という名前を付けてもサブコマンドと衝突しません。`--tier` はワークフロー自身のデフォルトティアを使います。宣言済みの実行引数ごとに `--arg` を繰り返してください ── ワークフローが宣言していない `--arg` キーは、黙って無視されるのではなく、実行開始前に、宣言済みのキー一覧とともに拒否されます。`run cancel` は実行に残っているノードをキャンセルし、そのペインを閉じます。

`--json` なしの `run show` は、実行が `paused` であるか、あるノードが停止しているときに責任のあるノードを名指しします: `status` 行は `paused (node "lint": needs_attention)` のように表示され、続けてそのノードの blocker の理由と再開条件、そしてすべてのノードのパスとステータスが表示されます。

```bash
kvx workflow node show <run_id> <path> [--json]
kvx workflow node steer <run_id> <path> <text>
kvx workflow node interrupt <run_id> <path>
kvx workflow node restart <run_id> <path>
kvx workflow node complete [--result-file <path>]
```

`<path>` は、`plan` や `research/2/verify` のような、ノードのインスタンスパスです ── `run show`、`workflow show`、DAG ビューに表示されます。`steer` は、後述する DAG ビューでのステアリングと同じ方法で、実行中のノードにテキストを注入します。`interrupt` はエスケープを送り、ノードを終了させずに現在のターンを止めます。`restart` はノードのペインを閉じ、試行回数を増やし、`task.md` から再起動します。`node complete` は、ノード自身が自分に対して実行する唯一のコマンドです ── 前述のノードの契約を参照してください。`--json` なしの `node show` は、記録されている場合、`path`/`status`/`model`/`effort`/`pane_id` に加えてノードの blocker (理由と再開条件) を表示します。

## DAG ビュー

Karvex の TUI から実行の DAG ビューを開くと、実行の様子をライブで確認できます: グラフの層ごとに配置されたノードのボックス、その間に描かれるエッジ、そして選択中のノードのステータス、モデル、使用量、直近のチェックポイントの要約、ブロッカーを示す詳細ストリップです。

`prefix+shift+F` で開くか、グローバルメニュー — サイドバー下部のランチャー — から **workflow dag** を選びます。メニュー項目は、このサーバーが実行を進めている間だけ表示されます。描画するグラフが他に存在しないためです。キーの方も、実行がなければ空のオーバーレイを開かずにその旨を知らせます。`keys.open_workflow_dag` で割り当てを変更できます。

| 操作 | 動作 |
| --- | --- |
| `h` / `j` / `k` / `l` または矢印キー | 選択をその方向の隣接ノードへ移動する |
| ノードをクリック | ビューを離れずにそのノードを選択する |
| `Enter`、またはノードをダブルクリック | そのノードのペインにフォーカスし、DAG ビューを離れる |
| `s` | 選択中のノード用のステア入力行を開く。入力してから `Enter` を押すと `kvx workflow node steer` として送信される |
| `Esc` (ステア入力行が開いている間) | 送信せずにステア入力行を閉じる |
| `Esc` (それ以外) | DAG ビューを離れる |
| マウスを動かす | 選択がポインターに追従する |

このビューは、実行の読み取り専用の投影です: ノードのステータス、位置、エッジはすべて、CLI と JSON API が報告するのと同じ実行グラフに由来します。ノードのペインへフォーカスする操作は、Karvex の他のペインにフォーカスする場合と同じ経路を通るため、DAG ビューを離れても、選択したチームメイトを見ている状態のままです。
